# gd-tools

./: .env.example  .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml
.github/: SECRETS.md
.github/workflows/: ci.yml  commit-check.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/agent_skill_versioning_20260712/: index.md  metadata.json
conductor/archive/ast_edge_cases_20260718/: index.md  metadata.json  spec.md
conductor/archive/autoload_coverage_20260715/: index.md
conductor/archive/cicd_pipeline_20260712/: spec.md
conductor/archive/config_20260710/: metadata.json  plan.md
conductor/archive/config_show_validate_20260715/: plan.md  spec.md
conductor/archive/coverage-plan-generator_20260711/: index.md  metadata.json  spec.md
conductor/archive/coverage_autoload_fix_20260714/: index.md  spec.md
conductor/archive/coverage_cli_20260711/: metadata.json
conductor/archive/coverage_hooks_20260711/: metadata.json  spec.md
conductor/archive/coverage_reporter_20260711/: index.md  plan.md
conductor/archive/coverage_success_display_20260714/: index.md  plan.md
conductor/archive/coverage_tracker_20260711/: plan.md
conductor/archive/doctor_20260711/: index.md  metadata.json
conductor/archive/documentation_20260712/: index.md  metadata.json  spec.md
conductor/archive/fix-match-instr_20260714/: plan.md  spec.md
conductor/archive/godot-detection_20260710/: index.md  metadata.json  plan.md
conductor/archive/init_20260710/: metadata.json  spec.md
conductor/archive/lint_output_clipping_fix_20260715/: metadata.json  spec.md
conductor/archive/lint_wrapper_20260710/: index.md  metadata.json  plan.md
conductor/archive/plan_generator_caching_20260717/: metadata.json  spec.md
conductor/archive/pypi-release_20260712/: plan.md
conductor/archive/reload_keep_state_20260715/: plan.md  spec.md
conductor/archive/scaffolding_20260709/: index.md  plan.md
conductor/archive/shell_completion_20260716/: index.md  metadata.json  plan.md
conductor/archive/smart_backup_20260717/: index.md
conductor/archive/spike_coverage_20260709/: index.md  spec.md
conductor/archive/stale_addon_detection_20260714/: metadata.json  plan.md
conductor/archive/stdout_20260715/: metadata.json  plan.md  spec.md
conductor/code_styleguides/: general.md  python.md
conductor/tracks/config_20260710/: index.md  (+2 more)
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CONTRIBUTING.md  PRD.md  ROADMAP.md  ROADMAP_v1.md  SPIKE_coverage_instrumentation.md  TDD.md  TESTING_STRATEGY.md  USER_GUIDE.md
skills/gd-tools/: SKILL.md
spike/: .gutconfig.json  SPIKE_RESULTS.md  plan.json  project.godot
spike/scripts/: calculator.gd  calculator.gd.uid
spike/test/: test_calculator.gd  test_calculator.gd.uid  test_pre_run_hook.gd  test_pre_run_hook.gd.uid  test_tracker.gd  test_tracker.gd.uid
src/gd_tools/: __init__.py  __main__.py  addon_check.py  cli.py  config.py  doctor.py  errors.py  file_discovery.py  format_runner.py  godot.py  init.py  lint_runner.py  output.py  test_runner.py  update_check.py  verbosity.py  version.py
tests/e2e/: conftest.py  test_autoload_coverage_e2e.py  test_coverage_e2e.py  test_full_workflow.py
tests/fixtures/: broken.gd
tests/integration/: conftest.py  test_coverage_cli_integration.py  test_coverage_hooks.py  test_coverage_tracker_integration.py  test_doctor_integration.py  test_format_integration.py  test_init_integration.py  test_lint_integration.py  test_plan_cache_integration.py  test_test_runner_integration.py  test_verbosity_integration.py
tests/unit/: conftest.py  test_addon_check.py  test_cli.py  test_cli_config.py  test_cobertura_reporter.py  test_completion.py  test_config.py  test_doctor.py  test_errors.py  test_file_discovery.py  test_format_runner.py  test_generate_expected_plans.py  test_godot.py  test_html_reporter.py  test_init.py  test_lcov_reporter.py  test_lint_runner.py  test_main.py  test_match_coverage.py  test_orchestrator.py  test_output.py  test_package.py  test_plan_generator.py  test_plan_generator_edge_cases.py  test_reporter.py  test_terminal_reporter.py  test_test_runner.py  test_update_check.py  test_verbosity.py  test_version.py
tools/: generate_expected_plans.py
(+165 files in other folders)
